--- a/customerapi/customerapi/pom.xml
+++ b/customerapi/customerapi/pom.xml
@@ -129,6 +129,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-vault-config</artifactId>
 		</dependency>
+		    <!-- config client -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
 	
 		
 	</dependencies>
