--- a/customerapi/customerapi/pom.xml
+++ b/customerapi/customerapi/pom.xml
@@ -145,6 +145,12 @@
 		</dependency>
 	
 		
+		<!-- eureka client -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 <dependencyManagement>
