--- a/jwtsecurity/jwtsecurity/src/main/resources/application.properties
+++ b/jwtsecurity/jwtsecurity/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=9093
 spring.application.name=JWT-API
 #data source
-spring.datasource.url=jdbc:mysql://localhost:3306/boabanknov2022?useSSL=true
+spring.datasource.url=jdbc:mysql://localhost:3306/boabankfeb2023?useSSL=true
 spring.datasource.username=root
 spring.datasource.password=vignesh
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
