--- a/zuulgateway/zuulgateway/pom.xml
+++ b/zuulgateway/zuulgateway/pom.xml
@@ -49,7 +49,7 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 		<!-- json parsing -->
-		<!-- json flattener -->
+		
 		<dependency>
 			<groupId>com.github.wnameless</groupId>
 			<artifactId>json-flattener</artifactId>
@@ -61,7 +61,11 @@
 		    <artifactId>json-smart</artifactId>
 		    <version>2.4.7</version>
 		</dependency>
-		
+			<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 			<dependencies>
