--- a/resillience4j/resillience4j/src/main/resources/application.yml
+++ b/resillience4j/resillience4j/src/main/resources/application.yml
@@ -27,5 +27,5 @@ resilience4j:
         slow-call-rate-threshold: 60 
         failure-rate-threshold: 60
 
-serviceUrl: http://localhost:8765/api/customers/individuals/v1.0/?userName=dhara&userPwd=test@123
+serviceUrl: http://localhost:8765/api/customers/individuals/v1.0/
 alternativeServiceUrl: http://localhost:7070/individuals/v1.0/
