--- a/resilience4j/src/main/resources/application.yml
+++ b/resilience4j/src/main/resources/application.yml
@@ -13,7 +13,7 @@ resilience4j:
         retry-exceptions:
          - org.springframework.web.client.RestClientException
         ignore-exceptions:
-         - com.boa.resillience4j.exceptions.IgnoreException
+         - com.boa.resilience4j.exceptions.IgnoreException
   circuitbreaker:
     circuit-breaker-aspect-order: 1
     instances:
@@ -27,5 +27,5 @@ resilience4j:
         slow-call-rate-threshold: 60 
         failure-rate-threshold: 60
 
-serviceUrl: http://localhost:8765/api/customers/individuals/v1.0/
+serviceUrl: http://localhost:8765/api/customers/individuals/v1.0/?userName=eswari&userPwd=test@123
 alternativeServiceUrl: http://localhost:7070/individuals/v1.0/
