--- a/customerapikafka/src/main/resources/application.properties
+++ b/customerapikafka/src/main/resources/application.properties
@@ -1,4 +1,16 @@
 server.port=7070
-spring.application.name=Customer-API,boa-common, boa-app
-#config server properties
-spring.cloud.config.uri=http://localhost:8888
+spring.application.name=Customer-API-Kafka
+#actuator
+management.endpoint.metrics.enabled=true
+management.endpoints.web.exposure.include=*
+
+#kafka
+spring.cloud.stream.kafka.binder.brokers=localhost:9092
+spring.cloud.stream.kafka.binder.autoCreateTopics=false
+spring.cloud.stream.bindings.customer-out.destination=boacustomer2023
+spring.cloud.stream.bindings.customer-out.content-type=application/json
+
+
+
+
+
