--- a/accountapikafka2/src/main/resources/application.properties
+++ b/accountapikafka2/src/main/resources/application.properties
@@ -1,4 +1,24 @@
-server.port=7070
-spring.application.name=Customer-API,boa-common, boa-app
-#config server properties
-spring.cloud.config.uri=http://localhost:8888
+server.port=7072
+spring.application.name=Account-API
+
+#actuator
+management.endpoint.metrics.enabled=true
+management.endpoints.web.exposure.include=*
+
+#kafka
+spring.cloud.stream.kafka.binder.brokers=localhost:9092
+spring.cloud.stream.kafka.binder.autoCreateTopics=false
+spring.cloud.stream.bindings.customer-in.destination=boacustomer2023
+spring.cloud.stream.bindings.customer-in.content-type=application/json
+
+spring.cloud.stream.bindings.account-out.destination=boaaccount2023
+spring.cloud.stream.bindings.account-out.content-type=application/json
+
+
+#mongodb 
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=accountdb
+spring.data.mongodb.url=mongodb://localhost:27017/accountdb
+
+
